--- a/boneseg/config/boneseg_config.yaml
+++ b/boneseg/config/boneseg_config.yaml
@@ -38,7 +38,8 @@ data:
 
 train:
   out_dir: /mnt/d/hyebin/xgait/boneseg/output
-  exp_name: gnu_attnunet_512
+  # exp_name: gnu_attnunet_512
+  exp_name: test
   epochs: 200
   batch_size: 16
   eval_freq: 50
@@ -62,7 +63,7 @@ loss:
   smooth: 0.00001
 
 test:
-  ckpt: ""            # 비워두면 out_dir/exp_name/ckpt/best.pth 자동 사용
+  ckpt: /mnt/d/hyebin/xgait/boneseg/output/gnu_attnunet_512/ckpt/final.pth
   save_pred: true
   pred_dir: ""        # 비워두면 out_dir/exp_name/preds 사용
   overlay_alpha: 0.35
