--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# ignore dataset folder
-dataset/ 
-
 # ignore imgs, json, ckpts
 *.png
 *.jpg
@@ -20,4 +17,6 @@ __pycache__/
 !asset/
 !asset/*.png
 
+# ignore dataset folder but README file
+dataset/*
 !dataset/README.md
