--- a/runs/detect/yolo_finetune/output/knee_yolo11n/args.yaml
+++ b/runs/detect/yolo_finetune/output/knee_yolo11n/args.yaml
@@ -1,7 +1,7 @@
 task: detect
 mode: train
-model: /mnt/d/xgait/yolo_finetune/yolo11n.pt
-data: /mnt/d/xgait/yolo_finetune/yolo_finetune_config.yaml
+model: xgait/yolo_finetune/yolo11n.pt
+data: yolo_finetune/yolo_finetune_config.yaml
 epochs: 50
 time: null
 patience: 100
@@ -12,7 +12,7 @@ save_period: -1
 cache: false
 device: null
 workers: 8
-project: /mnt/d/xgait/yolo_finetune/output
+project: yolo_finetune/output
 name: knee_yolo11n
 exist_ok: true
 pretrained: true
@@ -29,7 +29,7 @@ amp: true
 fraction: 1.0
 profile: false
 freeze: null
-multi_scale: false
+multi_scale: 0.0
 compile: false
 overlap_mask: true
 mask_ratio: 4
@@ -82,6 +82,8 @@ cls: 0.5
 dfl: 1.5
 pose: 12.0
 kobj: 1.0
+rle: 1.0
+angle: 1.0
 nbs: 64
 hsv_h: 0.015
 hsv_s: 0.7
@@ -103,4 +105,4 @@ auto_augment: randaugment
 erasing: 0.4
 cfg: null
 tracker: botsort.yaml
-save_dir: /mnt/d/xgait/yolo_finetune/output/knee_yolo11n
+save_dir: /mnt/d/hyebin/xgait/runs/detect/yolo_finetune/output/knee_yolo11n
