ostdet train/test loader modified

--- a/ostdet/config/ostdet_2_class_config.yaml
+++ b/ostdet/config/ostdet_2_class_config.yaml
@@ -16,21 +16,21 @@ data:
     datasets: ["gnu"] # ["oai", "gnu"]
 
     oai:
-      root: /mnt/d/xgait/dataset/OAI/train
-      implant_negative_json: /mnt/d/xgait/dataset/OAI_json/OAI_train_implant.json
+      root: dataset/OAI/train
+      implant_negative_json: dataset/OAI_json/OAI_train_implant.json
 
     gnu:
-      root: /mnt/d/xgait/dataset/GNU
-      ost_json: /mnt/d/xgait/dataset/GNU_ost.json
-      implant_negative_json: /mnt/d/xgait/dataset/GNU_json/GNU_train_implant.json
+      root: dataset/GNU
+      ost_json: dataset/GNU_json/GNU_ost.json
+      implant_negative_json: dataset/GNU_json/GNU_train_implant.json
       use_knee: true
 
   test:
     datasets: ["gnu"] # ["oai", "gnu"]
 
     oai:
-      root: /mnt/d/xgait/dataset/OAI/test
-      implant_negative_json: /mnt/d/xgait/dataset/OAI_json/OAI_test_implant.json
+      root: dataset/OAI/test
+      implant_negative_json: dataset/OAI_json/OAI_test_implant.json
 
     gnu:
       root: dataset/GNU
@@ -39,8 +39,8 @@ data:
       use_knee: true
 
 train:
-  out_dir: /mnt/d/xgait/ostdet/output/ostdet_2_class
-  epochs: 200
+  out_dir: ostdet/output/ostdet_2_class
+  epochs: 10
   log_epoch: 5
   eval_freq: 10
   save_epoch: 50
@@ -50,7 +50,7 @@ train:
   batch_sampler:
     enabled: true
     n_class: 2
-    n_samples: 32
+    n_samples: 4
 
 optim:
   name: adamw
