--- a/ostdet/config/ostdet_2_class_config.yaml
+++ b/ostdet/config/ostdet_2_class_config.yaml
@@ -13,7 +13,7 @@ data:
     std:  [0.5, 0.5, 0.5]
 
   train:
-    datasets: ["gnu"] # ["oai", "gnu"]
+    datasets: ["oai", "gnu"] # ["oai", "gnu"]
 
     oai:
       root: dataset/OAI/train
@@ -43,7 +43,7 @@ train:
   epochs: 10
   log_epoch: 5
   eval_freq: 10
-  save_epoch: 50
+  save_epoch: 5
   num_workers: 4
   fp16: true
 
